argocd/app/vikunja/base/service.yaml
---
# Source: vikunja/templates/vikunja.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
spec:
  type: ClusterIP
  ports:
    - port: 3456
      targetPort: http
      protocol: TCP
      name: http
  selector: {}
