argocd/app/vikunja/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: vikunja
                port:
                  number: 3456
  tls:
    - hosts: []
      secretName: vikunja-cert
